<resources>
    <string name="app_name">Mohi</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Register</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phoneno">This phone no is invalid</string>
    <string name="error_invalid_password">Minimum of different classes of characters in password is 3. Classes of characters: Lower Case, Upper Case, Digits, Special Characters.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_notmatch_password">Password and Confirm password not match</string>
    <string name="permission_rationale">"permissions are needed."
    </string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tab_home">Home</string>
    <string name="tab_deals">Deals</string>
    <string name="tab_my_Account">My Account</string>
    <string name="tab_cart">Cart</string>
    <string name="tab_More">More</string>
    <string name="terms_and_conditions">By clicking on sign up, you agree to our\n Terms and conditions</string>
    <string name="nav_home">Home</string>
    <string name="nav_shop_by_category">Shop By Category</string>
    <string name="nav_deal_of_the_day">Deal Of the Day</string>
    <string name="nav_your_orders">Your Orders</string>
    <string name="nav_wish_list">Wish List</string>
    <string name="see_all">See All</string>
    <string name="eyai">Edit Your Account Information</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="modify_your_address">Modify Your Address</string>
    <string name="modify_yor_wishlist">Modify Your wish List</string>
    <string name="push_notification">Push Notifications</string>
    <string name="signout">Signout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="we_just_need_your_registered_email_address_to_send_you_link_for_you_password_reset">We just need your registered email address to send you link for you password reset</string>
    <string name="email_address_hint">Email Address</string>
    <string name="view_your_order_history">View Your Order History</string>
    <string name="downloads">Downloads</string>
    <string name="your_reward_points">Your Reward Points</string>
    <string name="view_your_retutn_requests">View Your Return Requests</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="recurring_payments">Recurring Payments</string>
    <string name="write_a_review">Write a Review</string>
    <string name="order_history">Order History</string>
    <string name="What_are_you_looking_for">What are you looking for?</string>
    <string name="categories">Categories</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="Write_a_review">Write a review?</string>
    <string name="Pre_order_this_item">Pre–order this item and get it delivered in 5–7 Days. Products are subjected to availability.</string>
    <string name="Size_Chart">Size Chart</string>
    <string name="Add_to_cart">Add to cart</string>
    <string name="Buy_Now">Buy Now</string>
    <string name="Product_description">Product Description</string>
    <string name="Saree_type">Saree Type</string>
    <string name="Top_Fabric">Top Fabric</string>
    <string name="Bottom">Bottom</string>
    <string name="Dupatta_Fabric">Dupatta Fabric</string>
    <string name="Inner">Inner</string>
    <string name="Wash_Care">Wash Care</string>
    <string name="please_select_the">Please select the preferred payment method to use on this order.</string>
    <string name="creadit_debit_card">Credit / Debit Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_card_no">Credit Card #No</string>
    <string name="expires">Expires</string>
    <string name="cvv_code">CVV-Code</string>
    <string name="agree_to_terms_conditions"><![CDATA[Agree to terms & conditions]]></string>
    <string name="i_agree_that_i_have_read_and_accepted_our_terms_conditions_for_you_purchase"><![CDATA[I agree that I have read and accepted our terms & conditions for you purchase]]></string>
    <string name="finish_your_order">Finish your order</string>
    <string name="price">Price -</string>
    <string name="skip">Skip</string>
    <string name="remove">Remove</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="max_price">Max price</string>
    <string name="min_price">Min price</string>
    <string name="submit">Submit</string>
    <string name="your_review">Your Review</string>
    <string name="writereview">Please write review</string>
    <string name="modify_address">Modify address</string>
    <string name="full_name">Full Name*</string>
    <string name="phone_no">Mobile Number*</string>
    <string name="pincode">PinCode*</string>
    <string name="flat_house_no_floor_building">Flat / House No. / Floor / Building*</string>
    <string name="colony_street_locality">Colony / Street / Locality*</string>
    <string name="town_city">Town / City*</string>
    <string name="state">State*</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="add_new_address">Add a new address</string>
    <string name="shipping_address">Shipping address</string>
    <string name="price_detail">Price Detail</string>
    <string name="delivery">Delivery</string>
    <string name="continue1">Continue</string>
    <string name="country">Country*</string>
    <string name="use_coupon_code">Use Coupon Code</string>
    <string name="payments">Payments</string>
    <string name="you_have_no_address">You have no address in your account.</string>
    <string name="old_password">Old Password</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name</string>
    <string name="shop_by_brand">Shop By Brand</string>
    <string name="colors">Colours</string>
    <string name="catalog">Catalog</string>
    <string name="availability">Availability</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="delivery_options">DELIVERY OPTIONS</string>
    <string name="provide_your_pincode_for_details">PROVIDE YOUR PINCODE FOR DETAILS</string>
    <string name="delivery_option_for">DELIVERY OPTION FOR</string>
    <string name="enter_the_pincode_of_delivery_address">Enter the pincode of delivery address</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="hey_please_sign_in_sign_up_to_move_further">Hey, Please Sign in/Sign up to move further.</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="products_related_to_this_item">Products related to this item</string>
    <string name="login_register">Login/Register</string>
    <string name="update_text">Update</string>
    <string name="update_app_message">This version of app is no longer supported, please update app from play store.</string>
    <string name="login_caps">LOGIN</string>
    <string name="username_or_email">Username or Email</string>
    <string name="Phone_or_email">Email or Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="forgot">Forgot</string>
    <string name="or_login_by">or login by</string>
    <string name="username">Username</string>
    <string name="pick_your_username">Pick your username</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="have_an_account_login_here">Have an account login here</string>
    <string name="register_caps">REGISTER</string>
    <string name="register">Register</string>
    <string name="or_register_by">or register by</string>
    <string name="forgot_password_caps">FORGOT PASSWORD</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_text">Hm, it\'s seems you\'re in problem when signing. fill form below to get access your account.</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google +</string>
    <string name="about_caps">ABOUT</string>
    <string name="simply_shop">Simply Shop</string>
    <string name="online_fashion_shopping_app">Online fashion shopping app, that can help you to explore and shopping on your smartphone easily.</string>
    <string name="simply_shop_was_build">Simply shop was build to make our consumer happy with our simple service to make them shop easily and instantly.</string>
    <string name="provided_by">Provided by</string>
    <string name="simply_shop_inc">Simply Shop Inc.</string>
    <string name="simply_shop_team">Simply Shop Team</string>
    <string name="maintained_by">Maintained by</string>
    <string name="help_caps">HELP</string>
    <string name="to_find_common">To find Common help documents please take a look on FAQ. Incase you have specific question hot ask button.</string>
    <string name="how_to_make_purchase">How to make purchase using a master debit card ?</string>
    <string name="faq_caps">FAQ</string>
    <string name="quick_help_to_you">Quick help to you about exploring our apps, here\'s some frequently question that will be helpfull.</string>
    <string name="you_didn_t_have_any_question">You didn\'t have any question history, start asking your problem.</string>
    <string name="congratulation_caps">CONGRATULATION</string>
    <string name="your_order_has_been_processed">Your order has been processed. Track your order now.</string>
    <string name="our_delivery_team_will">Our delivery team will contact you soon.\nDon\'t forget to follow our our social account</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="confirm">Confirm</string>
    <string name="amount_to_pay_this_order">Amount to pay this order.</string>
    <string name="rp_538_000">RP 538.000</string>
    <string name="copy">copy</string>
    <string name="bank_transfer">BANK TRANSFER</string>
    <string name="detailed_address">Detailed Address</string>
    <string name="_49_alvah_port">49 Alvah Port</string>
    <string name="country_new">Country</string>
    <string name="state_new">State</string>
    <string name="bolivia">Bolivia</string>
    <string name="virginia">Virginia</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="west_leonestad">West Leonestad</string>
    <string name="_89050">89050</string>
    <string name="update_address">Update Address</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="update_profile">Update Profile</string>
    <string name="categories_caps">CATEGORIES</string>
    <string name="help">HELP</string>
    <string name="rate_this_app">RATE THIS APP</string>
    <string name="area_683108">AREA:683108</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="phone">Phone</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="xxxx">XXXX</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
</resources>