<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_category"
            android:title="@string/categories_caps" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/faq_caps" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about_caps" />
        <item
            android:id="@+id/nav_rate_app"
            android:title="@string/rate_this_app" />
        <!-- <item
             android:id="@+id/nav_my_account"
             android:icon="@drawable/profile_white"
             android:title="@string/nav_my_account" />-->
    </group>


</menu>
