<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:background="@drawable/about_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:text="@string/about_caps"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simply_shop"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online_fashion_shopping_app"
        android:textSize="16sp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simply_shop_was_build"
        android:textSize="16sp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provided_by"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/simply_shop_inc_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/simply_shop_shape"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/simply_shop_inc"
        android:textAllCaps="false"
        android:textColor="@color/white_color" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maintained_by"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:id="@+id/simply_shop_team_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/simply_dev_shape"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/simply_shop_team"
        android:textAllCaps="false"
        android:textColor="@color/white_color" />

</LinearLayout>